Griffith 0.9
============
* Possible memory leak fixed (year data from some movie plugins wasn't parsed
  correctly)
* AnimeDB and PTGate movie plugins updated
* CSV import plugin updated
* First movie is selected by default now
* Czech translation updated


Griffith 0.9-rc3
================

* Old database is not modified during upgrade process (bug introduced in 0.9-rc2)
* Catch some more bad cases while upgrading database
* Fix upgrading volume / collection loan data
* Updated translations: Italian


Griffith 0.9-rc2
================

* Griffith works now a lot faster with large (>1000 movies) databases
* Fix displaying volume/collection's loan status
* Config files are now fully cross-platform
* New features:
  + limit search results to x movies
  + sort by last added movies
  + hide "Number" column
  + change "seen it" status without opening edit window, new icons added
* Filmweb movie plugin fixed
* Updated translations: Czech, French, German, Portuguese, Portuguese Brazilian,
  Swedish 

Note to package maintainers:
Please keep pysqlite1.0 as required dependency (see README file)
This will make upgrade process from 0.6.2 a lot easier.


Griffith 0.9~rc1 "Christmas Edition"
====================================
This release is marked as "Release Candidate" due to:
 - database format change (if you have any problems send us the
   ~/.griffith/griffith.gri file or `griffith --debug' output)
 - translations are not finished (translators need more time)

* SQLAlchemy transition, i.e.
  + MySQL support added
  + PostgreSQL support added
  + SQLite3 transition on Linux (pysqlite2 is now required)
* Import plugin system added, first import plugin (CSV)
* All movie plugins updated
* New data:
  + video codec
  + audio codec
  + audio channels
  + subtitle format
  + "commentary" language type added
* GUI changes:
  + editing movie details moved to "Add" dialog
  + languages data look changed
  + draggable toolbar
  + new "next" / "previous" buttons