@@ -7,7 +7,7 @@ Griffith ChangeLog
 ---- 0.9 ---
 
 2007-01-24  Piotr Ożarowski
-	* Convert GIF posters into JPEG format while fetching from Amazon (amazon module is still broken)
+	* Fetch from Amazon function recognizes more posters now
 
 2007-01-16  Vasco Nunes
 	* Czech translation updated (thanks to Ondra 'Kepi' Kudlík)
